--- a/bugless-CSS/Float-2/style.css
+++ b/bugless-CSS/Float-2/style.css
@@ -4,8 +4,11 @@
 }
 
 body {
+  height: 100vh;
+  background-color: beige;
   font-family: "Noto Sans KR", sans-serif;
   letter-spacing: -0.02em;
+  background-color: black;
 }
 
 h1 {
@@ -29,3 +32,36 @@ p {
 }
 
 /* ▼ WHERE YOUR CODE BEGINS */
+
+.card {
+  max-width: 540px;
+  padding: 20px;
+  background-color: #fff;
+}
+
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.card-user {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  margin-right: 20px;
+}
+
+.card-content h1 {
+  margin-bottom: 4px;
+}
+
+.card-content strong {
+  display: block;
+  margin-bottom: 12px;
+}
+
+.card-user,
+.card-content {
+  float: left;
+}
