--- a/bugless-CSS/Position-1/style.css
+++ b/bugless-CSS/Position-1/style.css
@@ -16,41 +16,12 @@ h1 {
 
 /* ▼ WHERE YOUR CODE BEGINS */
 
-.user-photo img {
-  display: block;
-  /* img는 inline요소로 되어 있지만, block요소로 바꿔주는게 좋다. */
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
-
-/* .user-card {
-  position: relative;
-
-} */
-
 .user-card {
   width: 240px;
-  padding: 8px 16px;
-  border: 1px solid #e5eaef;
+  height: 56px;
   border-radius: 4px;
-}
-
-.user-photo {
-  position: relative;
-  margin-right: 12px;
-}
-
-.user-status {
-  position: absolute;
-  right: -2px;
-  bottom: -2px;
-  /* display: block; position:absolute가 되면 자동으로 block요소로 되기 때문에 */
-  width: 12px;
-  height: 12px;
-  border: 2px solid #fff;
-  border-radius: 50%;
-  background-color: #21d891;
+  background-color: #fff;
+  border-color: E5EAEF, 100%;
 }
 
 .user-card::after {
@@ -59,15 +30,36 @@ h1 {
   clear: left;
 }
 
-.user-photo,
-.user-name {
-  float: left;
+.user-photo {
+  position: relative;
+  margin-right: 12px;
+  margin: 8px 12px;
 }
 
-.user-photo {
-  margin-right: 12px;
+.user-photo img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: block;
+}
+
+.user-status {
+  position: absolute;
+  right: -2px;
+  bottom: -2px;
+  /* display: block; */
+  width: 12px;
+  height: 12px;
+  border: 2px solid #fff;
+  background-color: #21d891;
+  border-radius: 50%;
 }
 
 .user-name {
   padding: 8px 0;
+}
+
+.user-photo,
+.user-name {
+  float: left;
 }
