--- a/bugless-CSS/MediaQuery/style.css
+++ b/bugless-CSS/MediaQuery/style.css
@@ -13,7 +13,7 @@ a {
 }
 
 .landing {
-  background-image: url("./assets/img-bg.jpg");
+  background-image: url("./img-bg.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -41,4 +41,74 @@ a {
 }
 
 /* ▼ WHERE YOUR CODE BEGINS */
-@media 
+
+.banner {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #ffc82c;
+}
+
+.banner-title a {
+  /* a태그에 있는 text의 부모가 a태그이기 때문에 가능 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  height: 64px;
+}
+
+.landing-title {
+  margin-bottom: 24px;
+  text-align: right;
+}
+
+.landing {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  width: 100%;
+  height: 100vh;
+  padding: 0 20px;
+}
+
+.landing-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 160px;
+  height: 52px;
+  font-size: 15px;
+  border: 2px solid #fff;
+  border-radius: 16px;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+@media screen and (min-width: 768px) {
+  .banner-title a {
+    height: 80px;
+  }
+
+  .banner {
+    top: 0;
+    bottom: auto;
+  }
+
+  .landing {
+    align-items: center;
+  }
+
+  .landing-title {
+    margin-bottom: 32px;
+    font-size: 50px;
+    text-align: center;
+  }
+
+  .landing-link {
+    width: 180px;
+    height: 100px;
+    font-size: 18px;
+  }
+}
