--- a/bugless-CSS/BoxShadow/style.css
+++ b/bugless-CSS/BoxShadow/style.css
@@ -8,6 +8,10 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  font-family: "Rubik", sans-serif;
+}
+button {
+  font-family: "Rubik", sans-serif;
 }
 
 .cancel-button {
